apps/services/media/qbittorrent/manifests/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-web
  namespace: media
spec:
  entryPoints:
    - websec-int
  routes:
    - match: Host(`qbittorrent.internal.starktastic.net`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: rate-limit-strong
          namespace: traefik-system
        - name: authentik-middleware
          namespace: authentik
  tls: {}
